Fix spacing and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -129,3 +129,15 @@ body {
         margin-bottom: 2em
     }
 }
+#dan{
+    margin-top: 16px;
+}
+#nick{
+    margin-top: 16px;
+}
+#ricky{
+    margin-top: 16px;
+}
+#bogaard{
+    margin-top: 16px;
+}
